objects/EUR_CRM_JB_Template_Criteria__c.object
<CustomObject>
    <description>PREU Data Model</description>
    <fields>
        <fullName>EUR_CRM_Group_Outlet_Type_Name__c</fullName>
        <formula>TEXT(EUR_JB_Group_Outlet_Type__r.EUR_CRM_Group_Outlet_Name__c)</formula>
        <label>Group Outlet Type Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EUR_CRM_Image_Level_Name__c</fullName>
        <formula>TEXT( EUR_JB_Image_Level__r.EUR_CRM_Name__c )</formula>
        <label>Image Level Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EUR_CRM_Outlet_Classification_Type__c</fullName>
        <label>Outlet Classification Type</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>EUR_CRM_Outlet_Classification__c</controllingField>
            <valueSetDefinition>
                <value>
                    <fullName>Hypermarket</fullName>
                </value>
                <value>
                    <fullName>Supermarket</fullName>
                </value>
                <value>
                    <fullName>Modern Retail</fullName>
                </value>
                <value>
                    <fullName>Convenience Store (Filling Station)</fullName>
                </value>
                <value>
                    <fullName>Wine &amp; Spirits</fullName>
                </value>
                <value>
                    <fullName>Stockist</fullName>
                </value>
                <value>
                    <fullName>Non-Conventional</fullName>
                </value>
                <value>
                    <fullName>Estate Supermarket</fullName>
                </value>
                <value>
                    <fullName>Specialist - Std &amp; Premium</fullName>
                </value>
                <value>
                    <fullName>Duty Free</fullName>
                </value>
                <value>
                    <fullName>Kiosk</fullName>
                </value>
                <value>
                    <fullName>Mini Mart</fullName>
                </value>
                <value>
                    <fullName>Petrol Forecourts</fullName>
                </value>
                <value>
                    <fullName>Convenience Store</fullName>
                </value>
                <value>
                    <fullName>Mini Depots - Containers</fullName>
                </value>
                <value>
                    <fullName>Open Market Wholesalers</fullName>
                </value>
                <value>
                    <fullName>E-Commerce</fullName>
                </value>
                <value>
                    <fullName>Online Store - Specialist Liquor Store</fullName>
                </value>
                <value>
                    <fullName>Online Store - Generalist</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>EUR_CRM_Outlet_Classification__c</fullName>
        <label>Outlet Classification</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Self Service</fullName>
                </value>
                <value>
                    <fullName>Counter service</fullName>
                </value>
                <value>
                    <fullName>Wholesalers / Distributors</fullName>
                </value>
                <value>
                    <fullName>Non-Conventional</fullName>
                </value>
                <value>
                    <fullName>Specialist Group</fullName>
                </value>
                <value>
                    <fullName>Specialist Independent</fullName>
                </value>
                <value>
                    <fullName>Wholesalers</fullName>
                </value>
                <value>
                    <fullName>Redistributors Off</fullName>
                </value>
                <value>
                    <fullName>Redistributors On</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>EUR_CRM_Outlet_Type_Name__c</fullName>
        <formula>EUR_JB_Outlet_Type__r.EUR_CRM_Name__c</formula>
        <label>Outlet Type Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EUR_CRM_PRS_Group_Outlet_Type_Name__c</fullName>
        <formula>TEXT(EUR_CRM_PRS_Group_Outlet_Type__r.EUR_CRM_Group_Outlet_Type_Name__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>PRS Group Outlet Type Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EUR_CRM_PRS_Group_Outlet_Type__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>PRS Group Outlet Type</label>
        <referenceTo>EUR_CRM_PRS_Group_Outlet_Type__c</referenceTo>
        <relationshipLabel>Template Criteria (EU)</relationshipLabel>
        <relationshipName>Template_Criteria_EU</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>EUR_CRM_PRS_Outlet_Type_Name__c</fullName>
        <formula>EUR_CRM_PRS_Outlet_Type__r.EUR_CRM_PRS_Outlet_Type_Name__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>PRS Outlet Type Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EUR_CRM_PRS_Outlet_Type__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>PRS Outlet Type</label>
        <referenceTo>EUR_CRM_PRS_Outlet_Type__c</referenceTo>
        <relationshipLabel>Template Criteria (EU)</relationshipLabel>
        <relationshipName>Template_Criteria_EU</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>EUR_CRM_PRS_Seg_Aspect_IL__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>PRS Segmentation Aspect (Image Level)</label>
        <referenceTo>EUR_CRM_PRS_Seg_Aspect__c</referenceTo>
        <relationshipLabel>Template Criteria (EU) (PRS Segmentation Aspect (Image Level))</relationshipLabel>
        <relationshipName>Template_Criteria_EU1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>EUR_CRM_PRS_Seg_Aspect_VP__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>PRS Segmentation Aspect (Vol. Potential)</label>
        <referenceTo>EUR_CRM_PRS_Seg_Aspect__c</referenceTo>
        <relationshipLabel>Template Criteria (EU) (PRS Segmentation Aspect (Vol. Potential))</relationshipLabel>
        <relationshipName>Template_Criteria_EU2</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>EUR_CRM_PRS_Segmentation_IL_Aspect_Name__c</fullName>
        <formula>TEXT(EUR_CRM_PRS_Seg_Aspect_IL__r.EUR_CRM_Segmentation_IL_Aspect_Name__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>PRS Segmentation IL Aspect Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EUR_CRM_PRS_Segmentation_VP_Aspect_Name__c</fullName>
        <formula>TEXT(EUR_CRM_PRS_Seg_Aspect_VP__r.EUR_CRM_Segmentation_VP_Aspect_Name__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>PRS Segmentation VP Aspect Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EUR_CRM_Volume_Potential_Name__c</fullName>
        <formula>TEXT(EUR_JB_Volume_Potential__r.EUR_CRM_Name__c)</formula>
        <label>Volume Potential Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EUR_JB_Active__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>EUR_JB_External_ID__c</fullName>
        <externalId>true</externalId>
        <label>External ID</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>EUR_JB_Group_Outlet_Type__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Group Outlet Type</label>
        <referenceTo>EUR_CRM_Group_Outlet_Type__c</referenceTo>
        <relationshipName>Template_Criteria</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>EUR_JB_Image_Level__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Image Level</label>
        <referenceTo>EUR_CRM_Image_Level__c</referenceTo>
        <relationshipName>Template_Criteria</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>EUR_JB_Outlet_Type__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Outlet Type</label>
        <referenceTo>EUR_CRM_Outlet_Type__c</referenceTo>
        <relationshipName>Template_Criteria</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>EUR_JB_Template__c</fullName>
        <label>Template</label>
        <referenceTo>EUR_CRM_JB_Template__c</referenceTo>
        <relationshipName>Template_Criteria</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>EUR_JB_Volume_Potential__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Volume Potential</label>
        <referenceTo>EUR_CRM_Volume_Potential__c</referenceTo>
        <relationshipName>Template_Criteria</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Template Criteria (EU)</label>
    <listViews>
        <fullName>EUR_BE_Template_Criteria</fullName>
        <columns>RECORDTYPE</columns>
        <columns>NAME</columns>
        <columns>EUR_JB_Group_Outlet_Type__c</columns>
        <columns>EUR_CRM_Group_Outlet_Type_Name__c</columns>
        <columns>EUR_JB_Image_Level__c</columns>
        <columns>EUR_CRM_Image_Level_Name__c</columns>
        <columns>EUR_CRM_Outlet_Classification__c</columns>
        <columns>EUR_CRM_Outlet_Classification_Type__c</columns>
        <columns>EUR_JB_Outlet_Type__c</columns>
        <columns>EUR_CRM_Outlet_Type_Name__c</columns>
        <columns>EUR_JB_Template__c</columns>
        <columns>EUR_JB_Volume_Potential__c</columns>
        <columns>EUR_CRM_Volume_Potential_Name__c</columns>
        <columns>CURRENCY_ISO_CODE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>EUR_CRM_JB_Template_Criteria__c.EUR_BE_On_Trade_Template_Criteria</value>
        </filters>
        <label>EUR BE Template Criteria</label>
        <language>en_US</language>
        <sharedTo>
            <roleAndSubordinates>EUR_BE</roleAndSubordinates>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>EUR_BG_Template_Criteria_View</fullName>
        <columns>RECORDTYPE</columns>
        <columns>NAME</columns>
        <columns>OBJECT_ID</columns>
        <columns>EUR_JB_Active__c</columns>
        <columns>EUR_JB_Template__c</columns>
        <columns>CURRENCY_ISO_CODE</columns>
        <columns>EUR_CRM_Group_Outlet_Type_Name__c</columns>
        <columns>EUR_CRM_Image_Level_Name__c</columns>
        <columns>EUR_CRM_Outlet_Type_Name__c</columns>
        <columns>EUR_CRM_Volume_Potential_Name__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>EUR_CRM_JB_Template_Criteria__c.EUR_BG_On_Trade_Template_Criteria</value>
        </filters>
        <label>EUR BG Template Criteria View</label>
        <language>en_US</language>
        <sharedTo>
            <roleAndSubordinates>EUR_BG</roleAndSubordinates>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>EUR_CH_Template_Criteria</fullName>
        <columns>NAME</columns>
        <columns>EUR_CRM_Group_Outlet_Type_Name__c</columns>
        <columns>EUR_CRM_Outlet_Type_Name__c</columns>
        <columns>EUR_CRM_Image_Level_Name__c</columns>
        <columns>EUR_CRM_Volume_Potential_Name__c</columns>
        <columns>EUR_JB_Template__c</columns>
        <columns>EUR_JB_Active__c</columns>
        <columns>EUR_JB_External_ID__c</columns>
        <columns>EUR_JB_Group_Outlet_Type__c</columns>
        <columns>EUR_JB_Image_Level__c</columns>
        <columns>EUR_JB_Outlet_Type__c</columns>
        <columns>EUR_JB_Volume_Potential__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>EUR_CRM_JB_Template_Criteria__c.EUR_CH_On_Trade_Template_Criteria</value>
        </filters>
        <label>EUR CH Template Criteria</label>
        <language>en_US</language>
        <sharedTo>
            <role>EMEA</role>
            <role>EUR_CH</role>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>EUR_CRM_PT_Template_Criteria_View</fullName>
        <columns>NAME</columns>
        <columns>OBJECT_ID</columns>
        <columns>EUR_JB_Active__c</columns>
        <columns>EUR_JB_External_ID__c</columns>
        <columns>EUR_CRM_Group_Outlet_Type_Name__c</columns>
        <columns>EUR_CRM_Image_Level_Name__c</columns>
        <columns>EUR_CRM_Outlet_Type_Name__c</columns>
        <columns>EUR_JB_Template__c</columns>
        <columns>EUR_CRM_Volume_Potential_Name__c</columns>
        <columns>CURRENCY_ISO_CODE</columns>
        <columns>RECORDTYPE</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>CREATED_DATE</columns>
        <columns>UPDATEDBY_USER</columns>
        <columns>LAST_UPDATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>EUR_CRM_JB_Template_Criteria__c.EUR_PT_On_Trade_Template_Criteria</value>
        </filters>
        <label>EUR PT Template Criteria View</label>
        <language>en_US</language>
        <sharedTo>
            <roleAndSubordinates>EUR_PT</roleAndSubordinates>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>EUR_MA_Template_Criteria</fullName>
        <columns>RECORDTYPE</columns>
        <columns>NAME</columns>
        <columns>EUR_JB_Group_Outlet_Type__c</columns>
        <columns>EUR_CRM_Group_Outlet_Type_Name__c</columns>
        <columns>EUR_JB_Image_Level__c</columns>
        <columns>EUR_CRM_Image_Level_Name__c</columns>
        <columns>EUR_CRM_Outlet_Classification__c</columns>
        <columns>EUR_CRM_Outlet_Classification_Type__c</columns>
        <columns>EUR_JB_Outlet_Type__c</columns>
        <columns>EUR_CRM_Outlet_Type_Name__c</columns>
        <columns>EUR_JB_Template__c</columns>
        <columns>EUR_JB_Volume_Potential__c</columns>
        <columns>EUR_CRM_Volume_Potential_Name__c</columns>
        <columns>CURRENCY_ISO_CODE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>EUR_CRM_JB_Template_Criteria__c.EUR_MA_On_Trade_Template_Criteria</value>
        </filters>
        <label>EUR MA Template Criteria</label>
        <language>en_US</language>
        <sharedTo>
            <roleAndSubordinates>EUR_MA</roleAndSubordinates>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>EUR_NG_Template_Criteria</fullName>
        <columns>RECORDTYPE</columns>
        <columns>NAME</columns>
        <columns>EUR_JB_Group_Outlet_Type__c</columns>
        <columns>EUR_CRM_Group_Outlet_Type_Name__c</columns>
        <columns>EUR_JB_Image_Level__c</columns>
        <columns>EUR_CRM_Image_Level_Name__c</columns>
        <columns>EUR_CRM_Outlet_Classification__c</columns>
        <columns>EUR_CRM_Outlet_Classification_Type__c</columns>
        <columns>EUR_JB_Outlet_Type__c</columns>
        <columns>EUR_CRM_Outlet_Type_Name__c</columns>
        <columns>EUR_JB_Template__c</columns>
        <columns>EUR_JB_Volume_Potential__c</columns>
        <columns>EUR_CRM_Volume_Potential_Name__c</columns>
        <columns>CURRENCY_ISO_CODE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>EUR_CRM_JB_Template_Criteria__c.EUR_NG_Off_Trade_Template_Criteria,EUR_CRM_JB_Template_Criteria__c.EUR_NG_On_Trade_Template_Criteria</value>
        </filters>
        <label>EUR NG Template Criteria</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>EUR_RU_Template_Criteria</fullName>
        <columns>NAME</columns>
        <columns>EUR_JB_External_ID__c</columns>
        <columns>EUR_CRM_Group_Outlet_Type_Name__c</columns>
        <columns>EUR_CRM_Outlet_Type_Name__c</columns>
        <columns>EUR_CRM_Image_Level_Name__c</columns>
        <columns>EUR_CRM_Volume_Potential_Name__c</columns>
        <columns>EUR_JB_Template__c</columns>
        <columns>EUR_JB_Active__c</columns>
        <columns>EUR_JB_Group_Outlet_Type__c</columns>
        <columns>EUR_JB_Image_Level__c</columns>
        <columns>EUR_JB_Outlet_Type__c</columns>
        <columns>EUR_JB_Volume_Potential__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>EUR_CRM_JB_Template_Criteria__c.EUR_RU_On_Trade_Template_Criteria</value>
        </filters>
        <label>EUR RU Template Criteria</label>
        <language>en_US</language>
        <sharedTo>
            <role>EMEA</role>
            <role>EUR_RU</role>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>EUR_ZA_Criteria</fullName>
        <columns>RECORDTYPE</columns>
        <columns>CURRENCY_ISO_CODE</columns>
        <columns>NAME</columns>
        <columns>EUR_CRM_Outlet_Classification__c</columns>
        <columns>EUR_CRM_Group_Outlet_Type_Name__c</columns>
        <columns>EUR_CRM_Outlet_Type_Name__c</columns>
        <columns>EUR_CRM_Image_Level_Name__c</columns>
        <columns>EUR_CRM_Volume_Potential_Name__c</columns>
        <columns>EUR_JB_Template__c</columns>
        <columns>EUR_JB_Active__c</columns>
        <columns>EUR_JB_External_ID__c</columns>
        <columns>EUR_JB_Group_Outlet_Type__c</columns>
        <columns>EUR_JB_Image_Level__c</columns>
        <columns>EUR_JB_Outlet_Type__c</columns>
        <columns>EUR_JB_Volume_Potential__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>EUR_CRM_JB_Template_Criteria__c.EUR_ZA_Off_Trade_Template_Criteria,EUR_CRM_JB_Template_Criteria__c.EUR_ZA_On_Trade_Template_Criteria</value>
        </filters>
        <label>EUR ZA Criteria</label>
        <language>en_US</language>
        <sharedTo>
            <roleAndSubordinates>EUR_ZA</roleAndSubordinates>
        </sharedTo>
    </listViews>
    <nameField>
        <displayFormat>TPC-{00000000}</displayFormat>
        <label>Template Criteria No.</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Template Criteria (EU)</pluralLabel>
    <recordTypes>
        <fullName>EUR_AO_Off_Trade_Template_Criteria</fullName>
        <active>true</active>
        <label>EUR AO Off Trade Template Criteria</label>
    </recordTypes>
    <recordTypes>
        <fullName>EUR_AO_On_Trade_Template_Criteria</fullName>
        <active>true</active>
        <label>EUR AO On Trade Template Criteria</label>
    </recordTypes>
    <recordTypes>
        <fullName>EUR_BE_On_Trade_Template_Criteria</fullName>
        <active>true</active>
        <label>EUR BE On Trade Template Criteria</label>
    </recordTypes>
    <recordTypes>
        <fullName>EUR_BG_On_Trade_Template_Criteria</fullName>
        <active>true</active>
        <label>EUR BG On Trade Template Criteria</label>
    </recordTypes>
    <recordTypes>
        <fullName>EUR_CH_On_Trade_Template_Criteria</fullName>
        <active>true</active>
        <label>EUR CH On Trade Template Criteria</label>
    </recordTypes>
    <recordTypes>
        <fullName>EUR_CRM_DE_Template_Criteria</fullName>
        <active>true</active>
        <label>DE Template Criteria</label>
    </recordTypes>
    <recordTypes>
        <fullName>EUR_DK_ON_Trade_Template_Criteria</fullName>
        <active>true</active>
        <description>Record Type for DK ON trade Accounts&apos; Template Criteria</description>
        <label>EUR DK ON Trade Template Criteria</label>
    </recordTypes>
    <recordTypes>
        <fullName>EUR_FI_On_Trade_Template_Criteria</fullName>
        <active>true</active>
        <label>EUR FI On Trade Template Criteria</label>
    </recordTypes>
    <recordTypes>
        <fullName>EUR_GB_Template_Criteria</fullName>
        <active>true</active>
        <label>GB Template Criteria</label>
    </recordTypes>
    <recordTypes>
        <fullName>EUR_KE_Off_Trade_Template_Criteria</fullName>
        <active>true</active>
        <label>EUR KE Off Trade Template Criteria</label>
    </recordTypes>
    <recordTypes>
        <fullName>EUR_KE_On_Trade_Template_Criteria</fullName>
        <active>true</active>
        <label>EUR KE On Trade Template Criteria</label>
    </recordTypes>
    <recordTypes>
        <fullName>EUR_MA_On_Trade_Template_Criteria</fullName>
        <active>true</active>
        <label>EUR MA On Trade Template Criteria</label>
    </recordTypes>
    <recordTypes>
        <fullName>EUR_NG_Off_Trade_Template_Criteria</fullName>
        <active>true</active>
        <label>EUR NG Off Trade Template Criteria</label>
    </recordTypes>
    <recordTypes>
        <fullName>EUR_NG_On_Trade_Template_Criteria</fullName>
        <active>true</active>
        <label>EUR NG On Trade Template Criteria</label>
    </recordTypes>
    <recordTypes>
        <fullName>EUR_PT_On_Trade_Template_Criteria</fullName>
        <active>true</active>
        <label>EUR PT On Trade Template Criteria</label>
    </recordTypes>
    <recordTypes>
        <fullName>EUR_RU_Off_Trade_Template_Criteria</fullName>
        <active>true</active>
        <description>RU Off Trade</description>
        <label>EUR RU Off Trade Template Criteria</label>
    </recordTypes>
    <recordTypes>
        <fullName>EUR_RU_On_Trade_Template_Criteria</fullName>
        <active>true</active>
        <description>RU On Trade</description>
        <label>EUR RU On Trade Template Criteria</label>
    </recordTypes>
    <recordTypes>
        <fullName>EUR_ZA_Off_Trade_Template_Criteria</fullName>
        <active>true</active>
        <label>EUR ZA Off Trade Template Criteria</label>
    </recordTypes>
    <recordTypes>
        <fullName>EUR_ZA_On_Trade_Template_Criteria</fullName>
        <active>true</active>
        <label>EUR ZA On Trade Template Criteria</label>
    </recordTypes>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>